force-app/main/default/objects/CRM_PIT_Request__c/CRM_PIT_Request__c.object-meta.xml
<CustomObject>
    <description>This object will be used to track any requests for changes to use cases or defects/enhancements as we progress through Distributor</description>
    <label>CDM PIT Log</label>
    <nameField>
        <displayFormat>PIT Request - {0}</displayFormat>
        <label>CRM PIT Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRM PIT Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>