force-app/main/default/objects/CRM_PIT_Request__c/fields/Associated_Object__c.field-meta.xml
<CustomField>
    <fullName>Associated_Object__c</fullName>
    <label>Related To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add/Term</fullName>
            </value>
            <value>
                <fullName>Adjustment</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Business Process</fullName>
            </value>
            <value>
                <fullName>Cognos</fullName>
            </value>
            <value>
                <fullName>Comp Plan</fullName>
            </value>
            <value>
                <fullName>Credit Assignment</fullName>
            </value>
            <value>
                <fullName>Credit Commissions</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>DDS</fullName>
            </value>
            <value>
                <fullName>Delta</fullName>
            </value>
            <value>
                <fullName>GAL</fullName>
            </value>
            <value>
                <fullName>Incent</fullName>
            </value>
            <value>
                <fullName>Incentive Statement</fullName>
            </value>
            <value>
                <fullName>New Payee</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>People</fullName>
            </value>
            <value>
                <fullName>Plan Docs</fullName>
            </value>
            <value>
                <fullName>Quota</fullName>
            </value>
            <value>
                <fullName>Rankings</fullName>
            </value>
            <value>
                <fullName>Rates</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Table Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>