force-app/main/default/objects/CRM_PIT_Request__c/fields/Parent_CRM_PIT_Log_Request__c.field-meta.xml
<CustomField>
    <fullName>Parent_CRM_PIT_Log_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent CRM PIT Log Request</label>
    <referenceTo>CRM_PIT_Request__c</referenceTo>
    <relationshipLabel>CRM PIT Log</relationshipLabel>
    <relationshipName>Child_CRM_Project_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>