force-app/main/default/objects/CRM_PIT_Request__c/fields/reference_URL__c.field-meta.xml
<CustomField>
    <fullName>reference_URL__c</fullName>
    <description>if there is more documentation for this request, this is the URL of the associated documentation.</description>
    <inlineHelpText>if there is more documentation for this request, this is the URL of the associated documentation.</inlineHelpText>
    <label>reference URL</label>
    <type>Url</type>
</CustomField>