force-app/main/default/objects/CRM_PIT_Request__c/fields/Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Reported_By__c</fullName>
    <label>Reported By</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>