force-app/main/default/objects/CRM_PIT_Request__c/fields/Request_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Complete_Date__c</fullName>
    <inlineHelpText>When does this request need to be completed by?</inlineHelpText>
    <label>Request Complete Date</label>
    <type>Date</type>
</CustomField>