force-app/main/default/objects/CRM_PIT_Request__c/fields/Request_Description__c.field-meta.xml
<CustomField>
    <fullName>Request_Description__c</fullName>
    <label>Request Description</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>