force-app/main/default/objects/CRM_PIT_Request__c/fields/Request_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Request_Resolution__c</fullName>
    <label>Request Resolution</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>