force-app/main/default/objects/CRM_PIT_Request__c/fields/Request_Summary__c.field-meta.xml
<CustomField>
    <fullName>Request_Summary__c</fullName>
    <label>Request Summary</label>
    <length>65</length>
    <required>true</required>
    <type>Text</type>
</CustomField>