force-app/main/default/objects/CRM_PIT_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Defect</fullName>
            </value>
            <value>
                <fullName>Enhancement</fullName>
                <default>true</default>
                <label>Enhancement</label>
            </value>
            <value>
                <fullName>Go Live</fullName>
            </value>
            <value>
                <fullName>Standard Functionality</fullName>
            </value>
            <value>
                <fullName>UI Change</fullName>
            </value>
            <value>
                <fullName>Use Case Change</fullName>
            </value>
            <value>
                <fullName>User Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>