force-app/main/default/objects/CRM_PIT_Request__c/fields/Request_Update_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Request_Update_Next_Steps__c</fullName>
    <label>Request Update/Next Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>