force-app/main/default/objects/CRM_PIT_Request__c/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <label>Use Case</label>
    <length>50</length>
    <type>Text</type>
</CustomField>