force-app/main/default/objects/CRM_PIT_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Use_Case__c</columns>
    <columns>Request_Summary__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Associated_Object__c</columns>
    <columns>Priority__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Request_Complete_Date__c</columns>
    <columns>Resolution_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed,Deferred: Future Phase</value>
    </filters>
    <filters>
        <field>Parent_CRM_PIT_Log_Request__c</field>
        <operation>equals</operation>
    </filters>
    <label>All Open Requests</label>
</ListView>