force-app/main/default/objects/CRM_PIT_Request__c/listViews/All_Closed.listView-meta.xml
<ListView>
    <fullName>All_Closed</fullName>
    <columns>NAME</columns>
    <columns>Request_Summary__c</columns>
    <columns>Associated_Object__c</columns>
    <columns>Priority__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Request_Complete_Date__c</columns>
    <columns>Resolution_Date__c</columns>
    <columns>Request_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>All Closed Requests</label>
</ListView>