force-app/main/default/objects/CRM_PIT_Request__c/listViews/All_Requests.listView-meta.xml
<ListView>
    <fullName>All_Requests</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Priority__c</columns>
    <columns>Request_Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Requests</label>
</ListView>