force-app/main/default/objects/CRM_PIT_Request__c/listViews/All_Requests_Deferred_Future_Phase.listView-meta.xml
<ListView>
    <fullName>All_Requests_Deferred_Future_Phase</fullName>
    <columns>NAME</columns>
    <columns>Use_Case__c</columns>
    <columns>Request_Summary__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Associated_Object__c</columns>
    <columns>Priority__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Request_Complete_Date__c</columns>
    <columns>Resolution_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>Deferred: Future Phase</value>
    </filters>
    <label>All Requests - Deferred: Future Phase</label>
</ListView>